--- a/src/components/AboutMe/AboutMe.module.css
+++ b/src/components/AboutMe/AboutMe.module.css
@@ -1,4 +1,7 @@
 .about-container {
+  background-color: rgb(24, 32, 45); /* Gris oscuro azulado */
+  border: 1px solid rgb(40, 50, 65); /* Gris azulado suave */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra ligera */
   display: flex;
   flex-direction: row;
   align-items: center;
